feat: added price metrics to api
